# yew-route-breadcrumbs

./: .travis.yml  Cargo.toml  Readme.md
derive/: Cargo.toml
derive/src/: attr.rs  enu.rs  lib.rs  macros.rs
examples/: basic.rs  complex.rs
src/: lib.rs
tests/: nested.rs  simple_enums.rs  simple_structs.rs
